// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly: with props 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "marginBottom": 10,
      "marginTop": 10,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
     Score is : 
    0
     - 
    0
  </Text>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
       You played: 
      fgyhjuk
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
       IA plays: 
      fghjklm
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
       Winner: 
      Draw
    </Text>
  </View>
</View>
`;

exports[`renders correctly: with props number 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "marginBottom": 10,
      "marginTop": 10,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
     Score is : 
    0
     - 
    1
  </Text>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
       You played: 
      paper
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
       IA plays: 
      rock
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
       Winner: 
      You
    </Text>
  </View>
</View>
`;

exports[`renders correctly: without props 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "marginBottom": 10,
      "marginTop": 10,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
     Score is : 
    0
     - 
    0
  </Text>
  <View />
</View>
`;
